--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -8,22 +8,45 @@
 <body>
     {% extends 'main.html' %}
     {% block content %}
-        <h1>Home Template</h1>
+
+        <style>
+            .home-container {
+                display: grid;
+                grid-template-columns: 1fr 3fr;
+            }
+        </style>
         <!--  -->
-        <div>
-            <a href="{% url 'create-room' %}">Create Room</a>
-            <hr />
-            <div>
-                {% for room in rooms %}
-                    <div>
-                        <a href="{% url 'update-room' room.id %}">Edit</a>
-                        <a href="{% url 'delete-room' room.id %}">Delete</a>
-                        <span>@{{room.host.username}}</span>
-                        <h5>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
-                        <small>{{room.topic.name}}</small>
-                        <hr />
-                    </div>
+        <div class="home-container">
+
+            <div class="">
+                <h3>Browse topics</h3>
+                <hr />
+                <div>
+                    <a href="{% url 'home' %}">All</a>
+                </div>
+                {% for topic in topics %}
+                <div>
+                    <a href="{% url 'home' %}?q={{topic.name}}">{{topic}}</a>
+                </div>
                 {% endfor %}
+            </div>
+
+            <div class="">
+                <h5>{{room_count}} rooms available</h5>
+                <a href="{% url 'create-room' %}">Create Room</a>
+                <hr />
+                <div>
+                    {% for room in rooms %}
+                        <div>
+                            <a href="{% url 'update-room' room.id %}">Edit</a>
+                            <a href="{% url 'delete-room' room.id %}">Delete</a>
+                            <span>@{{room.host.username}}</span>
+                            <h5>{{room.id}} -- <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
+                            <small>{{room.topic.name}}</small>
+                            <hr />
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
         </div>   
     {% endblock content %}    
