--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -18,7 +18,7 @@
         <!--  -->
         <div class="home-container">
 
-            <div class="">
+            <div class="topics-container">
                 <h3>Browse topics</h3>
                 <hr />
                 <div>
@@ -31,7 +31,7 @@
                 {% endfor %}
             </div>
 
-            <div class="">
+            <div class="rooms-container">
                 <h5>{{room_count}} rooms available</h5>
                 <a href="{% url 'create-room' %}">Create Room</a>
                 <hr />
