--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,7 +6,7 @@
     <title>Navbar</title>
 </head>
 <body>
-    <a href="">
+    <a href="/">
         <h1>LOGO</h1>
     </a>
     <form method="GET" action="{% url 'home' %}">
