--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,6 +12,12 @@
     <form method="GET" action="{% url 'home' %}">
         <input type="text" name="q" placeholder="Search Rooms..."/>
     </form>
+
+    {% if request.user.is_authenticated %}
+    <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+    <a href="{% url 'login' %}">Login</a>
+    {% endif %}
     <hr />
 </body>
 </html>
