--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar</title>
-</head>
-<body>
+<div>
     <a href="/">
         <h1>LOGO</h1>
     </a>
@@ -20,5 +13,4 @@
     <a href="{% url 'login' %}">Login</a>
     {% endif %}
     <hr />
-</body>
-</html>
+</div>
