--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -18,7 +18,7 @@
         </a>
         {% if request.user == message.user %}
         <div class="roomListRoom__actions">
-          <a href="{% url 'delete-message' message.room.id %}">
+          <a href="{% url 'delete-message' message.id %}">
             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
               <title>remove</title>
               <path
