added mobile responsive parts

--- a/base/templates/base/activity.html
+++ b/base/templates/base/activity.html
@@ -3,7 +3,7 @@
 {% block content %}
 <main class="layout">
   <div class="container">
-    <div class="layout__box">
+    <div class="layout__box activity__layout__box">
       <div class="layout__boxHeader">
         <div class="layout__boxTitle">
           <a href="{% url 'home' %}">
