--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -424,6 +424,7 @@ a {
 .layout__box {
   width: 90%;
   max-width: 48rem;
+  max-height: 75vh;
   min-height: 40rem;
   position: absolute;
   top: 50%;
